restructure to sync-waves

--- a/argocd/apps/prod-argo/apps/1-applications.yaml
+++ b/argocd/apps/prod-argo/apps/1-applications.yaml
@@ -2,7 +2,9 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: appset-crucible-fortress-prod
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
+  name: appset-0-applications
   namespace: argocd
 spec:
   generators:
@@ -10,7 +12,7 @@ spec:
       repoURL: https://fortress.sei.cmu.edu/gitea/fortress-manifests/fortress-prod-argo.git
       revision: HEAD
       files:
-      - path: "apps/crucible/*.json"
+      - path: "apps/1-applications/*.json"
   template:
     metadata:
       name: '{{app.project_name}}'
@@ -18,23 +20,29 @@ spec:
       project: default
       source:
         repoURL: https://fortress.sei.cmu.edu/gitea/fortress-manifests/fortress-prod-k8s.git
-        targetRevision: '{{app.project_branch}}'
-        path: "crucible"
+        targetRevision: HEAD
+        path: "1-applications"
         plugin:
-          name: avp-helm-multi
+          name: argocd-vault-plugin
           env:
-            - name: HELM_ARGS
+            - name: MANIFEST_TYPE
+              value : '{{app.manifest_type}}'
+            - name: ADDITIONAL_ARGS
               value: '{{app.helm_args}}'
             - name: CHART_VERSION
               value: '{{app.helm_chart_version}}'
             - name: HELM_REPO
-              value: '{{app.helm_repo}}'
+              value: '{{app.repo_url}}'
             - name: HELM_CHART
-              value: '{{app.helm_chart_name}}'
+              value: '{{app.helm_chart}}'
             - name: HELM_RELEASE_NAME
               value: '{{app.project_name}}'
             - name: HTTP_PROXY
               value: 'http://proxy.sei.cmu.edu:8080'
+            - name: NAMESPACE
+              value: '{{app.namespace}}'
+            - name: VALUES_FILE
+              name: '{{app.values_file}}'
       destination:
         server: https://kubernetes.default.svc
         namespace: default
