--- a/argocd/apps/prod-argo/apps/0-base-env.yaml
+++ b/argocd/apps/prod-argo/apps/0-base-env.yaml
@@ -1,8 +1,9 @@
-#generate and deploy apps defined in the crucible folder
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: appset-monitoring-fortress-prod
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
+  name: appset-0-base
   namespace: argocd
 spec:
   generators:
@@ -10,7 +11,7 @@ spec:
       repoURL: https://fortress.sei.cmu.edu/gitea/fortress-manifests/fortress-prod-argo.git
       revision: HEAD
       files:
-      - path: "apps/monitoring/*.json"
+      - path: "apps/0-base/*.json"
   template:
     metadata:
       name: '{{app.project_name}}'
@@ -19,25 +20,31 @@ spec:
       source:
         repoURL: https://fortress.sei.cmu.edu/gitea/fortress-manifests/fortress-prod-k8s.git
         targetRevision: '{{app.project_branch}}'
-        path: "monitoring"
+        path: "0-base"
         plugin:
-          name: avp-helm-multi
+          name: argocd-vault-plugin
           env:
-            - name: HELM_ARGS
+            - name: MANIFEST_TYPE
+              value : '{{app.manifest_type}}'
+            - name: ADDITIONAL_ARGS
               value: '{{app.helm_args}}'
             - name: CHART_VERSION
               value: '{{app.helm_chart_version}}'
             - name: HELM_REPO
-              value: '{{app.helm_repo}}'
+              value: '{{app.repo_url}}'
             - name: HELM_CHART
-              value: '{{app.helm_chart_name}}'
+              value: '{{app.helm_chart}}'
             - name: HELM_RELEASE_NAME
               value: '{{app.project_name}}'
             - name: HTTP_PROXY
               value: 'http://proxy.sei.cmu.edu:8080'
+            - name: NAMESPACE
+              value: '{{app.namespace}}'
+            - name: VALUES_FILE
+              name: '{{app.values_file}}'
       destination:
         server: https://kubernetes.default.svc
-        namespace: monitoring
+        namespace: default
       syncPolicy:
         automated:
           prune: false
