--- a/argocd/apps/prod-argo/apps/0-base/postgresql.config.json
+++ b/argocd/apps/prod-argo/apps/0-base/postgresql.config.json
@@ -1,8 +1,12 @@
 {
     "app": {
         "project_name" : "postgresql",
+        "namespace" : "default",
+        "manifest_type": "helm-oci",
         "helm_chart" : "oci://registry-1.docker.io/bitnamicharts/postgresql",
         "helm_chart_version" : "15.3.3",
-        "helm_args" : "-n default -f postgresql/postgresql.values.yaml" 
+        "repo_url": "",
+        "values_file" : "postgresql.values.yaml",
+        "helm_args" : ""
     }
 }
