--- a/argocd/apps/prod-argo/apps/1-applications/gallery.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/gallery.config.json
@@ -2,9 +2,12 @@
     "app": {
         "project_name" : "gallery",
         "project_branch" : "HEAD",
+        "namespace" : "default",
+        "manifest_type": "helm",
         "helm_repo" : "https://helm.cmusei.dev/charts",
         "helm_chart_name" : "gallery",
         "helm_chart_version" : "1.4.1",
-        "helm_args" : "-f gallery.values.yaml"
+        "values_file" : "gallery.values.yaml",
+        "helm_args" : ""
     }
 }
