--- a/argocd/apps/prod-argo/apps/1-applications/osticket.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/osticket.config.json
@@ -2,9 +2,12 @@
     "app": {
         "project_name" : "osticket",
         "project_branch" : "osticket",
+        "namespace" : "default",
+        "manifest_type": "helm",
         "helm_repo" : "https://helm.cmusei.dev/charts",
         "helm_chart_name" : "osticket",
         "helm_chart_version" : "1.17.5",
-        "helm_args" : "-n default -f osticket.values.yaml"
+        "values_file" : "osticket.values.yaml",
+        "helm_args" : ""
     }
 }
