--- a/argocd/apps/prod-argo/apps/2-monitoring/monitoring.config.json
+++ b/argocd/apps/prod-argo/apps/2-monitoring/monitoring.config.json
@@ -2,9 +2,12 @@
     "app": {
         "project_name" : "kube-prometheus-stack",
         "project_branch" : "HEAD",
+        "namespace" : "monitoring",
+        "manifest_type": "helm",
         "helm_repo" : "https://prometheus-community.github.io/helm-charts",
         "helm_chart_name" : "kube-prometheus-stack",
         "helm_chart_version" : "56.3.0",
-        "helm_args" : "-n monitoring -f kube-prometheus-stack.values.yaml"
+        "values_file" : "kube-prometheus-stack.values.yaml",
+	"helm_args" : ""
     }
 }
