Major reorganization - moved argocd dependent apps to argocd/install - use kustomization to deploy dependent apps instead of argo - cert-manager, nginx, postgres, gitea - update kustomization files - update distribute certs

--- a/argocd/install/gitea/Application.yaml
+++ b/argocd/install/gitea/Application.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cert-manager
+  name: gitea
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: cert-manager
+    namespace: gitea
     server: https://kubernetes.default.svc
   project: default
   syncPolicy:
@@ -16,12 +16,7 @@ spec:
     syncOptions:
     - CreateNamespace=true
   sources:
-  - path: argocd/apps/cert-manager/manifests
+  - path: argocd/install/gitea/kustomize/overlays/appliance
     repoURL: file:///crucible-repo/crucible-appliance
-    targetRevision: main
-    directory:
-      recurse: true
-  - path: argocd/apps/cert-manager/kustomize/overlays/appliance
-    repoURL: file:///crucible-repo/crucible-appliance/
     targetRevision: main
 
