--- a/argocd/install/cert-manager/Application.yaml
+++ b/argocd/install/cert-manager/Application.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx
+  name: cert-manager
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: ingress-nginx
+    namespace: cert-manager
     server: https://kubernetes.default.svc
   project: default
   syncPolicy:
@@ -15,8 +15,13 @@ spec:
       prune: true
     syncOptions:
     - CreateNamespace=true
-  source:
-    path: argocd/apps/nginx/kustomize/overlays/appliance
+  sources:
+  - path: argocd/install/cert-manager/manifests
     repoURL: file:///crucible-repo/crucible-appliance
+    targetRevision: main
+    directory:
+      recurse: true
+  - path: argocd/install/cert-manager/kustomize/overlays/appliance
+    repoURL: file:///crucible-repo/crucible-appliance/
     targetRevision: main
 
