--- a/argocd/install/longhorn/kustomize/base/kustomization.yaml
+++ b/argocd/install/longhorn/kustomize/base/kustomization.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: gitea
+namespace: longhorn-system
 helmCharts:
 - name: longhorn
   includeCRDs: true
-  version: 0.27.0
-  repo: https://helm.releases.hashicorp.com
+  version: 1.5.3
+  repo: https://charts.longhorn.io
   releaseName: appliance
   valuesFile: files/longhorn.values.yaml
 resources: 
