refine longhorn values to allow for single node install - update storageClass's in values files.

--- a/argocd/apps/mkdocs/kustomize/base/files/mkdocs-material.values.yaml
+++ b/argocd/apps/mkdocs/kustomize/base/files/mkdocs-material.values.yaml
@@ -62,7 +62,7 @@ ingress:
 storage:
   size: 1Gi
   mode: ReadWriteOnce
-  class: local-path
+  class: longhorn
 
 ##################
 # Git deployment #
