--- a/argocd/install/longhorn/kustomize/base/files/longhorn.values.yaml
+++ b/argocd/install/longhorn/kustomize/base/files/longhorn.values.yaml
@@ -84,8 +84,8 @@ persistence:
   defaultClass: true
   defaultFsType: ext4
   defaultMkfsParams: ""
-  defaultClassReplicaCount: 3
-  defaultDataLocality: disabled # best-effort otherwise
+  defaultClassReplicaCount: 1
+  defaultDataLocality: best-effort # best-effort otherwise
   reclaimPolicy: Delete
   migratable: false
   recurringJobSelector:
@@ -100,17 +100,17 @@ persistence:
   defaultNodeSelector:
     enable: false # disable by default
     selector: ""
-  removeSnapshotsDuringFilesystemTrim: ignored # "enabled" or "disabled" otherwise
+  removeSnapshotsDuringFilesystemTrim: enabled # "enabled" or "disabled" otherwise
 
 helmPreUpgradeCheckerJob:
   enabled: true
 
 csi:
   kubeletRootDir: ~
-  attacherReplicaCount: ~
-  provisionerReplicaCount: ~
-  resizerReplicaCount: ~
-  snapshotterReplicaCount: ~
+  attacherReplicaCount: 1
+  provisionerReplicaCount: 1
+  resizerReplicaCount: 1
+  snapshotterReplicaCount: 1
 
 defaultSettings:
   backupTarget: ~
@@ -119,8 +119,8 @@ defaultSettings:
   createDefaultDiskLabeledNodes: ~
   defaultDataPath: /var/lib/longhorn
   defaultDataLocality: best-effort
-  replicaSoftAntiAffinity: ~
-  replicaAutoBalance: ~
+  replicaSoftAntiAffinity: false
+  replicaAutoBalance: true
   storageOverProvisioningPercentage: 200
   storageMinimalAvailablePercentage: 15
   storageReservedPercentageForDefaultDisk: 30
@@ -162,7 +162,7 @@ defaultSettings:
   snapshotDataIntegrityImmediateCheckAfterSnapshotCreation: true
   snapshotDataIntegrityCronjob: ~
   removeSnapshotsDuringFilesystemTrim: true
-  fastReplicaRebuildEnabled: ~
+  fastReplicaRebuildEnabled: true
   replicaFileSyncHttpClientTimeout: ~
   logLevel: info
   backupCompressionMethod: ~
@@ -216,7 +216,7 @@ longhornDriver:
   #  label-key2: "label-value2"
 
 longhornUI:
-  replicas: 2
+  replicas: 1
   priorityClass: ~
   tolerations: []
   ## If you want to set tolerations for Longhorn UI Deployment, delete the `[]` in the line above
@@ -233,26 +233,26 @@ longhornUI:
 
 ingress:
   ## Set to true to enable ingress record generation
-  enabled: false
+  enabled: true
 
   ## Add ingressClassName to the Ingress
   ## Can replace the kubernetes.io/ingress.class annotation on v1.18+
-  ingressClassName: ~
+  ingressClassName: nginx
 
-  host: sslip.io
+  host: crucible.local
 
   ## Set this to true in order to enable TLS on the ingress record
-  tls: false
+  tls: true
 
   ## Enable this in order to enable that the backend service will be connected at port 443
   secureBackends: false
 
   ## If TLS is set to true, you must declare what secret will store the key/certificate for TLS
-  tlsSecret: longhorn.local-tls
+  tlsSecret: longhorn-tls
 
   ## If ingress is enabled you can set the default ingress path
   ## then you can access the UI by using the following full path {{host}}+{{path}}
-  path: /
+  path: /longhorn
 
   ## Ingress annotations done as key:value pairs
   ## If you're using kube-lego, you will want to add:
@@ -263,8 +263,7 @@ ingress:
   ##
   ## If tls is set to true, annotation ingress.kubernetes.io/secure-backends: "true" will automatically be set
   annotations:
-  #  kubernetes.io/ingress.class: nginx
-  #  kubernetes.io/tls-acme: true
+    cert-manager.io/cluster-issuer: ca-issuer
 
   secrets:
   ## If you're providing your own certificates, please use this to add the certificates as secrets
