longhorn 1.5.5 better multipath exclusion

--- a/argocd/install/longhorn/kustomize/base/kustomization.yaml
+++ b/argocd/install/longhorn/kustomize/base/kustomization.yaml
@@ -4,10 +4,10 @@ namespace: longhorn-system
 helmCharts:
 - name: longhorn
   includeCRDs: true
-  version: 1.5.3
+  version: 1.5.5
   repo: https://charts.longhorn.io
   releaseName: appliance
-  valuesFile: files/longhorn.values.yaml
+  valuesFile: files/longhorn.values.1.5.5.yaml
 resources: 
 - namespace.yaml
 
