update repo server

--- a/argocd/install/argocd/kustomize/overlays/appliance/kustomization.yaml
+++ b/argocd/install/argocd/kustomize/overlays/appliance/kustomization.yaml
@@ -14,6 +14,8 @@ patches:
     spec:
       template:
         spec:
+          securityContext:
+            fsGroup: 999
           volumes:
           - name: crucible-root-ca
             secret:
@@ -22,7 +24,6 @@ patches:
           - name: argocd-crucible-repo
             persistentVolumeClaim:
               claimName: argocd-crucible-repo
-
           containers:
           - name: repo-server
             env:
@@ -34,6 +35,13 @@ patches:
                 subPath: crucible-root-ca.crt
               - name: argocd-crucible-repo
                 mountPath: /crucible-repo
+          # initContainers:
+          # - name: crucible-repo-permissions
+          #   image: busybox
+          #   command: ["sh", "-c", "chown -R 999:999 /crucible-repo"]
+          #   volumeMounts:
+          #   - name: argocd-crucible-repo
+          #     mountPath: /crucible-repo
 - patch: |-
     apiVersion: apps/v1
     kind: Deployment
@@ -78,15 +86,7 @@ patches:
               - name: crucible-root-ca
                 mountPath: /etc/ssl/certs/crucible-root-ca.crt
                 subPath: crucible-root-ca.crt
-
-- patch: "- op: add\n  path: /spec/template/spec/volumes/-\n  value: \n    - name: crucible-root-ca\n      secret:\n        defaultMode: 420\n        secretName: crucible-root-ca"
-  target:
-    version: v1
-    group: apps
-    kind: deployment
-    name: appliance-argocd-repo-server
-    namespace: argocd
-
+          
 secretGenerator:
 - name: crucible-root-ca
   files:
