--- a/argocd/install/vault/kustomize/base/files/app-vars.example.yaml
+++ b/argocd/install/vault/kustomize/base/files/app-vars.example.yaml
@@ -33,15 +33,18 @@ gitea:
   argocd-user: argocd
   gitea-admin: administrator
   gitea-admin-password: ${ADMIN_PASS}
+
 grafana:
   grafana-admin-pass: ${ADMIN_PASS}
   grafana-admin-user: admin
+
 graylog:
   graylog-admin-pass: ${ADMIN_PASS}
   graylog-admin-user: admin
   mongo-root-pass: ${ADMIN_PASS}
   mongo-user: graylog-user
   mongo-user-pass: ${ADMIN_PASS}
+
 player:
   player-api-db-connection-string: Server=postgresql;Port=5432;Database=player_db;Username=postgres;Password=${ADMIN_PASS};
   player-vm-api-db-connection-string: Server=postgresql;Port=5432;Database=vm_db;Username=postgres;Password=${ADMIN_PASS};
@@ -49,8 +52,10 @@ player:
   player-vm-api-vsphere-pass: ${ADMIN_PASS}
   player-vm-api-vsphere-user: caster-svc@vsphere.local
   proxmox-token: ${PROXMOX_TOKEN}
+
 postgres:
   default-admin-pass: ${ADMIN_PASS}
+
 stackstorm:
   stackstorm-mongo-key: ${ADMIN_PASS}
   stackstorm-mongo-pass: ${ADMIN_PASS}
@@ -59,10 +64,12 @@ stackstorm:
   stackstorm-rabbitmq-cookie: ${ADMIN_PASS}
   stackstorm-rabbitmq-password: ${ADMIN_PASS}
   stackstorm-rabbitmq-user: administrator
+
 steamfitter:
   steamfitter-api-connection-string: Server=postgresql;Port=5432;Database=steamfitter_db;Username=postgres;Password=${ADMIN_PASS};SSL Mode=Prefer;Trust Server Certificate=true;
   steamfitter-api-vm-task-api-pass: ${ADMIN_PASS}
   steamfitter-api-vm-task-api-user: administrator
+
 shared:
   crucible-admin-pass: "${ADMIN_PASS}"
   crucible-admin-user: crucible-admin@${DOMAIN}
@@ -72,10 +79,10 @@ shared:
   fortress-tls-fullchain-b64: "${TLS_ROOT_CA_B64}"
   fortress-tls-key: "${TLS_ROOT_KEY}"
   fortress-tls-key-b64: "${TLS_ROOT_KEY_B64}"
-  http_proxy: http://cloudproxy.sei.cmu.edu:80
-  https_proxy: http://cloudproxy.sei.cmu.edu:80
+  http_proxy: ~
+  https_proxy: ~
   ingress-class: nginx
-  no_proxy: localhost,.cmu.edu,.cert.org,.cwd.local,osticket-mysql,10.64.149.0/24,10.42.0.0/16,10.43.0.0/16
+  no_proxy: ~
   oauth-admin-guid: d29518c4-f61c-4284-81c4-f2fbd79e6e9a
   oauth-authority-url: realms/crucible
   oauth-authorization-url: realms/crucible/protocol/openid-connect/auth
@@ -83,11 +90,12 @@ shared:
   oauth-env: fortress
   oauth-gid: 00eb8904-5b88-4c68-ad67-cec0d2e07aa6
   oauth-provider: keycloak
-  oauth-token-url: "realms/crucible/protocol/openid-connect/token\n "
+  oauth-token-url: "realms/crucible/protocol/openid-connect/token"
   oauth-userapi-url: realms/crucible/protocol/openid-connect/userinfo
 
 topomojo:
   topomojo-api-connection-string": Server=postgresql;Port=5432;Database=topomojo_db;Username=postgres;Password='${ADMIN_PASS}';SSL Mode=Prefer;Trust Server Certificate=true;
+
 vsphere: 
   vsphere-cluster: ${VSPHERE_CLUSTER}
   vsphere-datacenter: ${VSPHERE_DATACENTER}
