--- a/argocd/install/cert-manager/kustomize/base/kustomization.yaml
+++ b/argocd/install/cert-manager/kustomize/base/kustomization.yaml
@@ -1,6 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: cert-manager
+helmCharts:
+- name: cert-manager
+  includeCRDs: true
+  version: 1.16.1
+  repo: https://charts.jetstack.io
+  releaseName: appliance
+  valuesFile: files/cert-manager.values.yaml
+  namespace: cert-manager
 secretGenerator:
   - name: root-ca
     files: 
@@ -9,7 +17,7 @@ secretGenerator:
 generatorOptions:
   disableNameSuffixHash: true
 resources: 
-- cert-manager.yaml
+- namespace.yaml
 - ClusterIssuer.yaml
 
 
