--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,5 @@ appliance.yaml
 **/*/*.crt
 **/*/*.key
 **/*/vault-keys.yaml
-**/*/argo-role-id.yaml
-**/*/argo-secret-id.yaml
+**/*/argo-role-id*
+**/*/argo-secret-id*
