--- a/argocd/apps/prod-k8s/crucible/topomojo.values.yaml
+++ b/argocd/apps/prod-k8s/crucible/topomojo.values.yaml
@@ -9,7 +9,7 @@ topomojo-api:
     repository: cmusei/topomojo-api
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: "2.3.0"
+    tag: "2.3.3"
   serviceAccount:
     create: true
 
@@ -22,8 +22,9 @@ topomojo-api:
     annotations: 
       nginx.ingress.kubernetes.io/proxy-body-size: 6g
       kubernetes.io/ingress.class: nginx
+      cert-manager.io/cluster-issuer: ca-issuer
     hosts:
-      - host: fortress.sei.cmu.edu
+      - host: <path:fortress-prod/data/shared#domain>
         paths:
           - path: /topomojo/api
             pathType: ImplementationSpecific
@@ -32,7 +33,7 @@ topomojo-api:
           - path: /topomojo/docs
             pathType: ImplementationSpecific
     tls: 
-    - secretName: fortress-tls
+    - secretName: <path:fortress-prod/data/shared#domain>-tls
       hosts:
         - <path:fortress-prod/data/shared#domain>
   
@@ -117,7 +118,7 @@ topomojo-ui:
     repository: cmusei/topomojo-ui
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: "2.3.0"
+    tag: "2.3.2"
 
   imagePullSecrets: []
   nameOverride: ""
@@ -154,6 +155,7 @@ topomojo-ui:
     annotations: 
       kubernetes.io/ingress.class: <path:fortress-prod/data/shared#ingress-class>
       nginx.ingress.kubernetes.io/proxy-body-size: 6g
+      cert-manager.io/cluster-issuer: ca-issuer
       # kubernetes.io/tls-acme: "true"
     hosts:
       - host: <path:fortress-prod/data/shared#domain>
@@ -161,7 +163,7 @@ topomojo-ui:
           - path: /topomojo
             pathType: ImplementationSpecific
     tls: 
-     - secretName: fortress-tls
+     - secretName: <path:fortress-prod/data/shared#domain>-tls
        hosts:
          - <path:fortress-prod/data/shared#domain>
     
@@ -214,10 +216,10 @@ topomojo-ui:
       "mkshost": "",
       "oidc": {
         "client_id": "fortress_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_topomojo-ui",
-        "authority": "https://fortress.sei.cmu.edu/keycloak/realms/crucible",
-        "redirect_uri": "https://fortress.sei.cmu.edu/topomojo/oidc",
-        "silent_redirect_uri": "https://fortress.sei.cmu.edu/topomojo/oidc-silent.html",
-        "post_logout_redirect_uri": "https://fortress.sei.cmu.edu/topomojo",
+        "authority": "https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible",
+        "redirect_uri": "https://<path:fortress-prod/data/shared#domain>/topomojo/oidc",
+        "silent_redirect_uri": "https://<path:fortress-prod/data/shared#domain>/topomojo/oidc-silent.html",
+        "post_logout_redirect_uri": "https://<path:fortress-prod/data/shared#domain>/topomojo",
         "response_type": "code",
         "scope": "openid profile topomojo-api",
         "automaticSilentRenew": true,
