updates argocd: - custom-ca-certificates mount to repo server - admin password updated to match ADMIN_PASS variable - renamed argocd-tls - updated vault plugin initContainer to alpine/curl - custom-ca works in vault plugin initContainer - increased repo server pvc updates cert-manager: - uses certificate chain instead of just the root ca argo-deps: - applies cert-manager twice since CRDs are not ready vault: - fixes several echo statments that didin't have quotes - unseal-vault script improved with more file checks coreDNS: Updated coredns with code, cd, keystore subdomains offline-reset: fixes wait condition and shortens timeout

--- a/argocd/apps/Application.yaml
+++ b/argocd/apps/Application.yaml
@@ -16,7 +16,7 @@ spec:
     - CreateNamespace=true
   sources:
   - path: argocd/apps
-    repoURL: file:///crucible-repo/crucible-appliance
-    targetRevision: main
+    repoURL: https://crucible.local/gitea/crucible/crucible-appliance.git
+    targetRevision: offline-reorg
 
 
