--- a/argocd/install/cert-manager/kustomize/base/kustomization.yaml
+++ b/argocd/install/cert-manager/kustomize/base/kustomization.yaml
@@ -12,8 +12,8 @@ helmCharts:
 secretGenerator:
   - name: root-ca
     files: 
-    - tls.crt=files/root-ca.pem
-    - tls.key=files/root-ca.key
+    - tls.crt=files/root-chain.pem
+    - tls.key=files/intermediate-ca.key
 generatorOptions:
   disableNameSuffixHash: true
 resources: 
